# sqlinpython

./: .gitignore  .pre-commit-config.yaml  ANALYSIS.md  CLAUDE.md  README.md  README.rst  TODO.md  TODO_expression.md  flake.nix  justfile  pylintrc  pyproject.toml
.claude/commands/: fix-analysis.md  implement-stmt.md
.github/workflows/: python-package.yml
sqlinpython/: __init__.py  base.py  bind_parameter.py  case.py  cast.py  column_def.py  constrain.py  create_sequence.py  create_table.py  datatype.py  expression.py  functions.py  name.py  order.py  reference.py  row_value_constructor.py  select.py  select_expression.py  table_spec.py  value.py
sqlinpython/sequence/: __init__.py  create_sequence.py
sqlinpython/table/: create_table.py
src/sqlinpython/: __init__.py  alter_table.py  analyze.py  attach.py  base.py  builders.py  column_def.py  column_definition.py  column_foreign_key_clause.py  column_name.py  common_table_expression.py  conflict_clause.py  create.py  create_index.py  create_table.py  create_trigger.py  create_view.py  create_vtable.py  delete.py  detach.py  drop.py  drop_table.py  expression.py  foreign_key_clause.py  functions.py  indexed_column.py  insert.py  keywords.py  name.py  ordering_term.py  pragma.py  reindex.py  returning.py  savepoint.py  select.py  select_base.py  table_constraint.py  table_foreign_key_clause.py  table_or_subquery.py  transaction.py  (+4 more)
src/sqlinpython/expression/: __init__.py  bind_parameter.py  case.py  column.py  core.py  frame_bound.py  function.py  literal.py
src/sqlinpython/sequence/: core.py  create_sequence.py  drop_sequence.py  sequence.py
src/sqlinpython/table/: __init__.py  drop_table.py
tests/: test_alter_table.py  test_analyze.py  test_attach.py  test_case.py  test_cast.py  test_column_def.py  test_common_table_expression.py  test_constrain.py  test_constraint.py  test_create_index.py  test_create_table.py  test_create_trigger.py  test_create_view.py  test_create_vtable.py  test_delete.py  test_detach.py  test_drop.py  test_drop_table.py  test_expression.py  test_expressions.py  test_function.py  test_functions.py  test_indexed_column.py  test_insert.py  test_ordering_term.py  test_pragma.py  test_reindex.py  test_rollback.py  test_select.py  test_select_query.py  test_sequence.py  test_sqlinpython.py  test_transaction.py  test_update.py  test_vacuum.py  test_value.py
tests/select/: test_select_queries.py  test_select_types.py  test_select_unit.py
