[project]
name = "sqlinpython"
version = "0.1.0"
description = ""
authors = [
    { name = "António Capela", email = "acapela96@hotmail.com" }
]
requires-python = ">=3.12"

dependencies = []

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "ty",
    "pre-commit",
    "ipykernel",
    "pytest",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
#lint.select = ["E", "F", "I", "UP"]
fix = true

[tool.mypy]
disable_error_code = "type-abstract"
