[project]
name = "sqlinpython"
version = "0.1.0"
description = ""
authors = [
    { name = "António Capela", email = "acapela96@hotmail.com" }
]
requires-python = ">=3.12"

dependencies = []

[project.optional-dependencies]
dev = [
    "mypy",
    "basedpyright",
    "ruff",
    "ty",
    "pre-commit",
    "ipykernel",
    "pytest",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
#lint.select = ["E", "F", "I", "UP"]
fix = true

[tool.mypy]
disable_error_code = "type-abstract"
allow_redefinition = true

[tool.ty.analysis]
# Disable support for `type: ignore` comments
respect-type-ignore-comments = false

[tool.basedpyright]
reportUnsafeMultipleInheritance = false
reportMissingSuperCall = false
reportUnannotatedClassAttribute = false
reportPrivateUsage = false
# basedpyright 1.38.2 incorrectly flags match statement cases and defensive
# else branches as unreachable due to overly aggressive exhaustiveness checking.
# This also causes reportUnnecessaryIsInstance and reportUnnecessaryComparison
# to flag checks on types narrowed to Never.
reportUnreachable = false
reportUnnecessaryIsInstance = false
reportUnnecessaryComparison = false
# Import cycles between column_definition, foreign_key_clause, and table_constraint
# are architectural - these classes are genuinely interdependent and work fine at runtime.
reportImportCycles = false
